force-app/main/default/objects/Approval_Snapshot__c/Approval_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Approval Snapshot</label>
    <nameField>
        <displayFormat>AS-{0000000}</displayFormat>
        <label>Approval Snapshot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>