force-app/main/default/objects/Approval_Snapshot__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Approval Snapshots</relationshipLabel>
    <relationshipName>Approval_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>