force-app/main/default/objects/Approval_Snapshot__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Approval Snapshots</relationshipLabel>
    <relationshipName>Approval_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>